# slurmmon-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: changelog.md  cluster_discovery_commands.sh  user_guide.md
src/slurmmon_cli/: __main__.py  cli.py  config.py  demo.py  models.py  slurm.py
src/slurmmon_cli/analysis/: efficiency.py  gpu_queue.py  gpu_usage.py  queue_time.py  users.py
src/slurmmon_cli/storage/: collector.py  database.py  schema.py
src/slurmmon_cli/tui/: app.py  dashboard.py  data.py  formatting.py  panels.py
src/slurmmon_cli/tui/screens/: account_detail.py  efficiency.py  explorer.py  monitor.py  node_detail.py  settings.py  user_detail.py
src/slurmmon_cli/tui/styles/: default.tcss
src/slurmmon_cli/tui/widgets/: cluster_summary.py  gpu_chart.py  grouped_footer.py  node_heatmap.py
src/slurmwatch/: __main__.py  cli.py  config.py  models.py  slurm.py
src/slurmwatch/analysis/: efficiency.py
src/slurmwatch/storage/: collector.py  database.py  schema.py
src/slurmwatch/tui/: dashboard.py  panels.py
tests/: conftest.py  test_analysis.py  test_config.py  test_gpu_usage.py  test_node_utilization.py  test_slurm.py  test_storage.py  test_tui.py
tests/fixtures/: sacct_output.json  scontrol_nodes_output.json  sinfo_output.json  squeue_output.json  sshare_output.txt
