[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "slurmwatch"
version = "0.1.0"
description = "Lightweight CLI Slurm cluster job monitor"
requires-python = ">=3.10"

[project.scripts]
slurmwatch = "slurmwatch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
