[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "slurmmon-cli"
version = "0.1.0"
description = "Lightweight CLI Slurm cluster job monitor"
requires-python = ">=3.10"

[project.scripts]
slurmmon-cli = "slurmmon_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
